--- a/src/css/_header.scss
+++ b/src/css/_header.scss
@@ -42,6 +42,7 @@
         top: 80px;
         right: calc( (100% - 1380px)/2 + 20px);
 
+        height: 70px;
         width: 70px;
 
         z-index: 99;
