--- a/src/css/_variable.scss
+++ b/src/css/_variable.scss
@@ -1,6 +1,7 @@
 $blue:                      #52dfee;
 $yellow:                    #fdc830;
 $red:                       #d70000;
+$pink:                      #fa21a1;
 $violet:                    #30219f;
 $darkblue:                  #1C097A;
 $lightgreen:                #d3fb78;
