--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -61,9 +61,12 @@ a{
 .text-darkblue{color:$darkblue;}
 .text-red{color:$red;}
 .text-green{color:$green;}
+.text-pink{color:$pink;}
 
 .text-uppercase{text-transform: uppercase; }
 .text-bold{font-weight: 700;}
+
+.text-wrap{white-space: nowrap;}
 
 .margin-top{margin-top: 50px;}
 .margin-bottom{margin-bottom: 50px;}
@@ -729,6 +732,70 @@ a{
         }
     }
 }
+/* FOR DESIGN PAGE */
+.design{
+    .header{
+        &__email{
+            color: $pink;
+        }
+        &__nav{
+            background: $pink;
+        }
+    }
+    .content{
+        &_title{
+            background: linear-gradient(180deg, #ecc2f9 0%, #f1dcf9 100%);
+            .heading{
+                color: $grey;
+            }
+            .offer{
+                max-width: 100%;
+                color: $grey;
+            }
+            &__elements{
+                bottom: -100px;
+            }
+            &__svg{
+                transform: translateY(-30px);
+            }
+        }
+        &_color{
+            background: #f2dff8 url("../images/bg_design.png") no-repeat center top/contain;
+            background-position-y: -150px;
+            padding-top: 200px;
+
+            color: $grey;
+            .heading + .subheading {
+                margin-top: 60px;
+            }
+            .subheading + .offer {
+                margin-top: 20px;
+            }
+            .element{
+                position: relative;
+                width: 100%;
+                margin-bottom: 60px;
+            }
+        }
+
+        .item{
+            .item__number{
+                background: $pink;
+            }
+            &_image{
+                .item__image:before{
+                    background: rgba(250, 33, 161, .15);
+                }
+                .item__image:hover{
+                    &:before{
+                        background: rgba(250, 33, 161, 0);
+                    }   
+                }
+            }
+        }
+    }
+}
+
 /* PROJECT IN PORTFOLIO BLOCK */
 .project{
     .heading{
