--- a/src/css/_item.scss
+++ b/src/css/_item.scss
@@ -40,6 +40,22 @@
             color: $lightgrey;
         }
     }
+    &__number{
+        display: inline-block;
+        line-height: 24px;
+        width: 26px;
+        height: 26px;
+        text-align: center;
+        border-radius: 50%; 
+
+        background: $grey;
+        color: $white;
+
+        margin-right: 15px;
+    }
+    &__image{
+        max-width: 100%;
+    }
     &_with-icon{
         position: relative;
         padding-left: 60px;
@@ -58,6 +74,47 @@
             color: $green;
             font-size: 32px;
             font-weight: 700;
+        }
+    }
+    &_image{
+        .item__title{
+            text-transform: none;
+            margin-bottom: 20px;
+        }
+        .item__number{
+            margin-left: -26px;
+        }
+        .item__image{
+            position: relative;
+            .img-fluid{
+                filter: grayscale(1);
+                transition: .3s;
+            }
+            &:before{
+                position: absolute;
+                top: 0;
+                left: 0;
+
+                content: '';
+                display: block;
+
+                width: 100%;
+                height: 100%;
+
+                background: rgba(0,0,0,.2);
+                transition: .3s;
+
+                z-index: 1;
+            }
+
+            &:hover{
+                .img-fluid{
+                    filter: grayscale(0);
+                }
+                &:before{
+                    background: rgba(0,0,0,0);
+                }
+            }
         }
     }
 }
