--- a/src/css/_portfolio.scss
+++ b/src/css/_portfolio.scss
@@ -20,16 +20,17 @@
         }
     }
     &__row{
-        
         width: 2000px;
         text-align: right;
         padding: 80px 0;
-        overflow-x: scroll;
+        overflow-x: hidden;
+        overflow-y: hidden;
     }
     &__item{
         float: left;
         margin-right: 40px;
         width: 360px;
+        height: 310px;
     }
     &__title{
         display: inline-block;
@@ -44,6 +45,7 @@
         }
     }
     &__image{
+        width: 100%;
         max-width: 100%;
     }
     &__link{
