--- a/src/answer.pug
+++ b/src/answer.pug
@@ -23,7 +23,7 @@ html(lang="ru", dir="ltr")
                     .col-10.col-md-4.col-xl-2
                         a.header__email(href="mailto:work@websoho.ru") work@websoho.ru
                     .col-10.col-md-5.col-xl-6
-                        a.header__link(href="#") Вернуться в блог
+                        a.header__link(href="#") Вернуться назад
             svg.header__nav#header__nav(version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve")
                 g
                     path.header__nav__path(d="M6.979,271.181c30.288,25.979,64.616,55.426,131.017,55.426c66.403-0.001,100.733-29.447,131.022-55.426c28.644-24.568,53.382-45.787,104.98-45.787c51.599,0,76.337,21.219,104.98,45.787c8.385,7.191,21.011,6.225,28.202-2.159c7.191-8.385,6.225-21.011-2.16-28.202c-30.289-25.979-64.619-55.426-131.022-55.426S273.265,214.84,242.976,240.82c-28.644,24.568-53.382,45.787-104.98,45.787c-51.597,0-76.332-21.218-104.974-45.787c-8.384-7.191-21.01-6.226-28.202,2.159C-2.372,251.363-1.405,263.99,6.979,271.181z")
@@ -74,30 +74,27 @@ html(lang="ru", dir="ltr")
             .container
                 .row.justify-content-center
                     .col-sm-10.col-xl-8
-                        .page__image(style="background-image:url('../images/image_blog.png');")
-                        .page__info.bg-grey
-                            .page__breadcrumb.breadcrumb
-                                .breadcrumb__item 
-                                    a(href="#") Главная
-                                .breadcrumb__item 
-                                    a(href="#") Блог
-                                .breadcrumb__item 
-                                    span 6 способов прокачать первый экран на вашем сайте
-                            .page__reading Время чтения: 
-                                span.text-bold 5 минут
+                        .page__image(style="background-image:url('../images/image_thanks.jpg');")
                         .page__content
-                            h1.heading 6 способов прокачать первый экран на вашем сайте
-                            p Тот контент, который вы разместите на «первом экране», является ключом к успеху сайта. Дизайн может заманить, заставить юзера нажимать (на нужные кнопки) или перемещаться по странице. Что должен увидеть пользователь на экране, прежде чем захочет пролистать страницу?
-                            blockquote Первое, на что обращает внимание посетитель сайта — первый экран. Это — визитная карточка всего сайта. Остальной контент пользователь увидит потом, поэтому важно заинтересовать его с первых секунд. В данной статье предлагаем вам простые способы сделать дизайн главной страницы и особенно первого экрана качественным и информативным.
-                            img(src='../images/image_post.png' alt="" title="")
-                            h2 Заголовок h2
-                            p Тот контент, который вы разместите на «первом экране», является ключом к успеху сайта. Дизайн может заманить, заставить юзера нажимать (на нужные кнопки) или перемещаться по странице. Что должен увидеть пользователь на экране, прежде чем захочет пролистать страницу?
-                            h3 Заголовок h3
-                            p Тот контент, который вы разместите на «первом экране», является ключом к успеху сайта. Дизайн может заманить, заставить юзера нажимать (на нужные кнопки) или перемещаться по странице. Что должен увидеть пользователь на экране, прежде чем захочет пролистать страницу?
-                            h4 Заголовок h4
-                            p Тот контент, который вы разместите на «первом экране», является ключом к успеху сайта. Дизайн может заманить, заставить юзера нажимать (на нужные кнопки) или перемещаться по странице. Что должен увидеть пользователь на экране, прежде чем захочет пролистать страницу?
-                            h5 Заголовок h5
-                            p Тот контент, который вы разместите на «первом экране», является ключом к успеху сайта. Дизайн может заманить, заставить юзера нажимать (на нужные кнопки) или перемещаться по странице. Что должен увидеть пользователь на экране, прежде чем захочет пролистать страницу?
+                            h1.heading Спасибо за оставленную заявку!
+                            p Мы постараемся ответить вам как можно скорее.
+        .content.post.post_portfolio
+            .container
+                .heading Реализованные 
+                    a.link(href="#") проекты
+                .row.justify-content-center.justify-content-lg-between
+                    .col-lg-3.col-md-5
+                        a.post__item.post__item_image(href="#" style="background-image: url('../images/belje-na-verevke.jpg')")
+                            .post__item__title 6&nbsp;способов прокачать первый экран на&nbsp;вашем сайте
+                            .post__item__offer 12.09.2018
+                    .col-lg-3.col-md-5
+                        a.post__item.post__item_image(href="#" style="background-image: url('../images/test-01.jpg')")
+                            .post__item__title О&nbsp;чем нужно помнить, создавая уникальные тексты?
+                            .post__item__offer 12.09.2018
+                    .col-lg-3.col-md-10
+                        a.post__item.post__item_last.post__item_image(href="#" style="background-image: url('../images/test-02.jpg')")
+                            .post__item__title Продвижение сайта почти бесплатно
+                            .post__item__offer 12.09.2018
         .content.post.post_preview
             .container
                 .heading Самое актуальное в нашем 
@@ -120,6 +117,6 @@ html(lang="ru", dir="ltr")
                         form.form.form_inline(action="")
                             input.in-phone.input-text(type="tel" placeholder="Ваш контактный телефон" value="")
                             button.btn.btn_primary(type="submit") Хочу больше клиентов
-                    .col-xl-3
-                        .offer How one dull get busy dare far. At principle perfectly by sweetness do. Decisively advantages nor expression unpleasing she led met. Indulgence contrasted sufficient to unpleasant in in insensible favourable. Hard do me sigh with west same lady. So by colonel hearted ferrars. Small for ask shade water manor think men begin. Equally he minutes my hastily. Estate was tended ten boy nearer seemed. Estate was tended ten boy nearer seemed. Up hung mr we give rest half. Their saved linen downs tears son add music. 
+                    .col-lg-3
+                        .offer.last How one dull get busy dare far. At principle perfectly by sweetness do. Decisively advantages nor expression unpleasing she led met. Indulgence contrasted sufficient to unpleasant in in insensible favourable. Hard do me sigh with west same lady. So by colonel hearted ferrars. Small for ask shade water manor think men begin. Equally he minutes my hastily. Estate was tended ten boy nearer seemed. Estate was tended ten boy nearer seemed. Up hung mr we give rest half. Their saved linen downs tears son add music. 
         include chunks/footer.pug
