--- a/src/css/_post.scss
+++ b/src/css/_post.scss
@@ -1,4 +1,4 @@
-.blog{
+.post{
     position: relative;
     background: #1b1b1b;
 
@@ -17,7 +17,7 @@
             padding-top: 150px;
         }
     }
-    .blog__item{
+    .post__item{
         margin-bottom: 40px;
 
         background-size: cover;
@@ -63,5 +63,12 @@
             top: 40px;
         }
         
+    }
+}
+
+@media (min-width: 992px){
+    .post .col-lg-3 {
+        flex: 0 0 calc(100%/3);
+        max-width: calc(100%/3);
     }
 }
