--- a/src/css/_variable.scss
+++ b/src/css/_variable.scss
@@ -11,6 +11,7 @@ $darkred:                   #6c1400;
 $white:                     #ffffff;
 $black:                     #0e0101;
 
+$darkgrey:                  #222222;
 $grey:                      #3f3f3f;
 $lightgrey:                 #858585;
 
