--- a/src/index.pug
+++ b/src/index.pug
@@ -41,8 +41,8 @@ html(lang="ru", dir="ltr")
             .container
                 .row
                     .col-xl-6.col-md-8.col-10.offset-md-2.offset-xl-1
-                        h1.heading Разработка. Реклама. Продвижение. Интернет-маркетинг.
-                        a.btn.btn_primary(data-fancybox="" data-animation-duration="500" data-src="#callModal" href="javascript:;") Обсудим проект?     
+                        h1.heading Разработка сайта. Реклама. Продвижение. Маркетинг.
+                        a.btn.btn_primary.btn_border(data-fancybox="" data-animation-duration="500" data-src="#callModal" href="javascript:;") Обсудим проект?     
         .content
             .container.p-relative
                 .element.element_point
@@ -52,13 +52,13 @@ html(lang="ru", dir="ltr")
                             span.text-darkblue до первых клиентов 
                             | всего 10 дней
                         p.offer Занимаемся любимым делом более 5 лет, поэтому не просто делаем и продвигаем сайты. Мы&nbsp;заинтересованы в&nbsp;вашем росте. Поверьте, мы болеем за&nbsp;ваш проект так&nbsp;же, как&nbsp;и&nbsp;вы, поэтому тщательно прорабатываем все детали, чтобы сайт нравился не&nbsp;только вам, но и&nbsp;потребителю. Обращаясь&nbsp;к&nbsp;нам, вы&nbsp;получаете соратников, которые знают короткий путь к&nbsp;сердцам ваших покупателей. 
-                        .content__btn
-                            a.content__btn__link(href="#") Веб-дизайн
-                            a.content__btn__link(href="#") SEO-продвижение
-                            a.content__btn__link(href="#") Контекстная реклама
-                            a.content__btn__link(href="#") Разработка сайта
-                            a.content__btn__link(href="#") Маркетинг продаж
-                            a.content__btn__link(href="#") Создание контента
+                        .content__group
+                            a.content__group__link(href="#") Веб-дизайн
+                            a.content__group__link(href="#") SEO-продвижение
+                            a.content__group__link(href="#") Контекстная реклама
+                            a.content__group__link(href="#") Разработка сайта
+                            a.content__group__link(href="#") Маркетинг продаж
+                            a.content__group__link(href="#") Создание контента
                     .col-lg-5.offset-lg-4
                         p.offer Сроки для нас — не пустой звук. Мы четко выстраиваем работу, чтобы ваш бизнес начал приносить прибыль как можно скорее. Вы всегда будете в курсе процесса и сможете понимать на каком этапе реализация проекта.
                     .col-lg-6.offset-lg-4
@@ -143,24 +143,24 @@ html(lang="ru", dir="ltr")
             .container
                 .row.align-items-end
                     .col-xl-6.col-lg-10
-                        h4.heading Нужны клиенты? <br/> Мы знаем как их получить
+                        h4.heading.heading_medium Нужны клиенты? <br/> Мы знаем как их получить
                         form.form.form_inline(action="")
                             input.in-phone.input-text(type="tel" placeholder="Ваш контактный телефон" value="")
                             button.btn.btn_primary(type="submit") Обсудим проект
                     .col-xl-3.col-lg-6
                         .offer.last Многие компании, предлагая свои услуги, говорят о том, какие они классные. Мы в первую очередь думаем о вас и вашем комфорте от сотрудничества с SOHO. Поэтому мы расскажем о том, что вы получите, обратившись к нам.
-        .content.blog
+        .post-preview
             .container
                 .heading Самое актуальное в нашем 
                     a.link(href="#") блоге
                 .row.justify-content-between
-                    .col-lg-3.blog__item
-                        a(href="#").blog__item__title 6&nbsp;способов прокачать первый экран на&nbsp;вашем сайте
-                        .blog__item__offer Воспользуйтесь нашими советами чтобы создать впечатляющий «первый экран» на вашем веб-сайте. Это не так сложно, как может показаться на первый взгляд.
-                    .col-lg-3.blog__item
-                        a(href="#").blog__item__title О&nbsp;чем нужно помнить, создавая уникальные тексты?
-                        .blog__item__offer Воспользуйтесь нашими советами чтобы создать впечатляющий «первый экран» на вашем веб-сайте. Это не так сложно, как может показаться на первый взгляд.
-                    .col-lg-3.blog__item
-                        a(href="#").blog__item__title Продвижение сайта почти бесплатно
-                        .blog__item__offer Воспользуйтесь нашими советами чтобы создать впечатляющий «первый экран» на вашем веб-сайте. Это не так сложно, как может показаться на первый взгляд.
+                    .col-lg-3.post-preview__item
+                        a(href="#").post-preview__item__title 6&nbsp;способов прокачать первый экран на&nbsp;вашем сайте
+                        .post-preview__item__offer Воспользуйтесь нашими советами чтобы создать впечатляющий «первый экран» на вашем веб-сайте. Это не так сложно, как может показаться на первый взгляд.
+                    .col-lg-3.post-preview__item
+                        a(href="#").post-preview__item__title О&nbsp;чем нужно помнить, создавая уникальные тексты?
+                        .post-preview__item__offer Воспользуйтесь нашими советами чтобы создать впечатляющий «первый экран» на вашем веб-сайте. Это не так сложно, как может показаться на первый взгляд.
+                    .col-lg-3.post-preview__item
+                        a(href="#").post-preview__item__title Продвижение сайта почти бесплатно
+                        .post-preview__item__offer Воспользуйтесь нашими советами чтобы создать впечатляющий «первый экран» на вашем веб-сайте. Это не так сложно, как может показаться на первый взгляд.
         include chunks/footer.pug
