--- a/src/chunks/footer.pug
+++ b/src/chunks/footer.pug
@@ -19,18 +19,19 @@ footer.footer
             .col-12.col-xl-6.col-lg-6
                 ul.footer__navbar
                     li.footer__navbar__item
+                        a.footer__navbar__link(href="#") Дизайн
+                    li.footer__navbar__item
                         a.footer__navbar__link(href="#") Верстка и разработка
                     li.footer__navbar__item
-                        a.footer__navbar__link(href="#") Реклама
+                        a.footer__navbar__link(href="#") Seo-продвижение
                     li.footer__navbar__item
-                        a.footer__navbar__link(href="#") Продвижение
+                        a.footer__navbar__link(href="#") ИНТЕРНЕТ МАРКЕТИНГ
+                    li.footer__navbar__item
+                        a.footer__navbar__link(href="#") КОНТЕКСТНАЯ РЕКЛАМА
                     li.footer__navbar__item
                         a.footer__navbar__link(href="#") Портфолио
                     li.footer__navbar__item
                         a.footer__navbar__link(href="#") Блог
-                    li.footer__navbar__item.last
-                        a.footer__navbar__link(href="#") Дизайн
-
 svg.go-to-top(x="0px" y="0px" viewBox="0 0 477.175 477.175" xml:space="preserve")
     g
         path(d="M145.188,238.575l215.5-215.5c5.3-5.3,5.3-13.8,0-19.1s-13.8-5.3-19.1,0l-225.1,225.1c-5.3,5.3-5.3,13.8,0,19.1l225.1,225   c2.6,2.6,6.1,4,9.5,4s6.9-1.3,9.5-4c5.3-5.3,5.3-13.8,0-19.1L145.188,238.575z")
