--- a/src/css/form/_buttons.scss
+++ b/src/css/form/_buttons.scss
@@ -21,4 +21,10 @@
             box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.5);
         }
     }      
+    &_border{
+        border: 4px solid $white;
+        &:hover{
+            border-color: darken($white, 25%);
+        }
+    }
 }
