--- a/src/css/media.scss
+++ b/src/css/media.scss
@@ -1,13 +1,4 @@
-@media(max-width: 1400px){
-    .margin-bottom-lg{
-        margin-bottom: 50px;
-    }
-    .text-lg-center{text-align: center;}
-    .header{
-        &__nav{
-            right: calc((100% - 960px)/2 + 20px);
-        }
-    }
+@media(max-width: 1400px){    
     .content{
         &_title{
             &__elements {
@@ -30,14 +21,6 @@
         .offer{
             &.last-xl{
                 margin-bottom: 40px;
-            }
-        }
-    }
-    .footer{
-        &__navbar{
-            font-size: 12px;
-            &__item {
-                padding: 0px 6px;
             }
         }
     }
@@ -128,36 +111,7 @@
 }
 @media(max-width: 992px){
     .d-flex-md{display: flex;}
-    .text-md-left{text-align: left;}
-    .margin-top-md-none{
-        margin-top: 0px;
-        &.margin-top{margin-top: 0px;}
-    }
-    .margin-top-md{
-        margin-top: 30px;
-        &.margin-top{margin-top: 30px;}
-    }
-    .margin-bottom-md-none{
-        margin-bottom: 0px;
-        &.margin-bottom{margin-bottom: 0px;}
-    }
-    .margin-bottom-md{
-        margin-bottom: 30px;
-        &.margin-bottom{margin-bottom: 30px;}
-    }
 
-    .header{
-        &__logo{
-            padding-top: 40px;
-        }
-        &__email{
-            padding-top: 40px;
-        }
-        &__nav{
-            top: 40px;
-            right: calc((100% - 720px)/2 + 20px);
-        }
-    }
     .content{
         &_title{
             padding-top: 340px;
@@ -182,21 +136,7 @@
             }
         }
     }
-    .footer{
-        &__navbar{
-            font-size: 14px;
-            margin-top: 30px;
-            justify-content: flex-start;
-            margin-left: -10px;
-            margin-right: -10px;
-            &__item {
-                padding: 10px;
-                &.last{
-                    padding: 10px;
-                }
-            }
-        }
-    }
+    
     .item{
         &_last-md{
             margin-bottom: 0;
@@ -352,36 +292,8 @@
     }
 }
 @media(max-width: 768px){
-    .margin-top-sm-none{
-        margin-top: 0px;
-        &.margin-top{margin-top: 0px;}
-    }
-    .margin-top-sm{
-        margin-top: 30px;
-        &.margin-top{margin-top: 30px;}
-    }
-    .margin-bottom-sm-none{
-        margin-bottom: 0px;
-        &.margin-bottom{margin-bottom: 0px;}
-    }
-    .margin-bottom-sm{
-        margin-bottom: 30px;
-        &.margin-bottom{margin-bottom: 30px;}
-    }
     .d-flex-sm{display: flex;}
-    .header{
-        &__logo{
-            padding-top: 40px;
-            width: 45px;
-        }
-        &__email{
-            padding-top: 40px;
-        }
-        &__nav{
-            top: 40px;
-            right: calc((100% - 540px)/2 + 20px);
-        }
-    }
+    
     .content{
         .element_point{
             max-width: 100%;
@@ -514,39 +426,7 @@
         bottom: 20px;
     }
 }
-@media(max-width: 576px){
-    .margin-top-xs-none{
-        margin-top: 0px;
-        &.margin-top{margin-top: 0px;}
-    }
-    .margin-top-xs{
-        margin-top: 30px;
-        &.margin-top{margin-top: 30px;}
-    }
-    .margin-bottom-xs-none{
-        margin-bottom: 0px;
-        &.margin-bottom{margin-bottom: 0px;}
-    }
-    .margin-bottom-xs{
-        margin-bottom: 30px;
-        &.margin-bottom{margin-bottom: 30px;}
-    }    
-    .header{
-        &__nav{
-            top: 20px;
-            right: 20px;
-        }
-        &__logo{
-            left: 20px;
-            padding-top: 20px;
-            width: 50px;
-        }
-        &__email{
-            left: auto;
-            right: 30px;
-            padding-top: 190px;
-        }
-    }
+@media(max-width: 576px){    
     .content{
         padding: 50px 0;
         .heading {
@@ -623,11 +503,7 @@
             padding: 60px 0;
         }
     }
-    .footer{
-        &__email{
-            margin-top: 10px;
-        }
-    }
+    
     .portfolio{
         padding-top: 60px;
         &__elements{
@@ -694,9 +570,9 @@
             }
         }
         &__task{
-            &.margin-bottom {
-                margin-bottom: 30px;
-            }
+            // &.margin-bottom {
+            //     margin-bottom: 30px;
+            // }
             &__item{
                 flex: 0 0 80px;
                 max-width: 80px;
